--- a/Pikrous/ios/Flutter/Generated.xcconfig
+++ b/Pikrous/ios/Flutter/Generated.xcconfig
@@ -1,15 +1,14 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=/Users/macbook/FlutterDev/flutter
-FLUTTER_APPLICATION_PATH=/Users/macbook/Documents/PikrousProject/Pikrous
+FLUTTER_ROOT=D:\Program Files\Flutter
+FLUTTER_APPLICATION_PATH=D:\year3\semester1\Cs361-mobile_app\final_mobile\Pikrous
 COCOAPODS_PARALLEL_CODE_SIGN=true
-FLUTTER_TARGET=/Users/macbook/Documents/PikrousProject/Pikrous/lib/main.dart
+FLUTTER_TARGET=lib\main.dart
 FLUTTER_BUILD_DIR=build
 FLUTTER_BUILD_NAME=1.0.0
 FLUTTER_BUILD_NUMBER=1
-EXCLUDED_ARCHS[sdk=iphonesimulator*]=i386
+EXCLUDED_ARCHS[sdk=iphonesimulator*]=i386 arm64
 EXCLUDED_ARCHS[sdk=iphoneos*]=armv7
-DART_DEFINES=RkxVVFRFUl9XRUJfQVVUT19ERVRFQ1Q9dHJ1ZQ==,RkxVVFRFUl9XRUJfQ0FOVkFTS0lUX1VSTD1odHRwczovL3d3dy5nc3RhdGljLmNvbS9mbHV0dGVyLWNhbnZhc2tpdC80YTU4NWI3OTI5NGU4MzBmYTg5YzI0OTI0ZDU4YTI3Y2M4ZmJmNDA2Lw==
 DART_OBFUSCATION=false
 TRACK_WIDGET_CREATION=true
 TREE_SHAKE_ICONS=false
-PACKAGE_CONFIG=/Users/macbook/Documents/PikrousProject/Pikrous/.dart_tool/package_config.json
+PACKAGE_CONFIG=.dart_tool/package_config.json
